# cpp-learning

./: .clang-format  .clang-tidy  .gitignore  LICENSE
std11/: .clang-format  .clang-tidy  plan.md
std11/a-foundations/01-nullptr/: CMakeLists.txt  solution.hpp  task.md  tests.cpp  verify.sh
std11/a-foundations/02-long-long/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/03-char16-char32/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/04-unicode-string-literals/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/05-static-assert/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/06-alignof/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/07-alignas/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/08-type-aliases/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/09-alias-templates/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/10-noreturn/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/a-foundations/11-carries-dependency/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/b-scoped-enums/12-enum-class/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/b-scoped-enums/13-enum-class-underlying-type/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/b-scoped-enums/14-forward-declared-enum/: CMakeLists.txt  solution.cpp  solution.hpp  task.md  tests.cpp
std11/c-range-for/15-range-for-arrays/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/c-range-for/16-range-for-containers/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/c-range-for/17-range-for-auto-variants/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/d-initialization/18-list-initialization/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/d-initialization/19-narrowing-prevention/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/d-initialization/20-initializer-list/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/d-initialization/21-brace-or-equal-nsdmi/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/d-initialization/22-delegating-constructors/: CMakeLists.txt  solution.hpp  task.md  tests.cpp  verify.sh
std11/d-initialization/23-inheriting-constructors/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/e-special-members/24-defaulted-functions/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/e-special-members/25-deleted-functions/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/e-special-members/26-final-class/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/e-special-members/27-final-virtual/: task.md  (+3 more)
std11/i-lambdas/54-lambda-as-std-function/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/m-smart-pointers/72-enable-shared-from-this/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std11/u-threading/121-packaged-task/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std14/: .clang-format  .clang-tidy  plan.md
std17/: .clang-format  .clang-tidy  plan.md
std17/b-templates/09-fold-expressions/: CMakeLists.txt  solution.hpp  task.md  tests.cpp
std20/: .clang-format  .clang-tidy  plan.md
(+646 files in other folders)
